clean up spacing and fixed the destructor to delete this.wrap in the tickets xbl

--- a/chrome/skin/widgets.css
+++ b/chrome/skin/widgets.css
@@ -14,3 +14,7 @@ grid[anonid=details] {
 grid[anonid=details] row {
   padding: 5px 2px;
 }
+
+textbox {
+  background: transparent;
+}
